--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
     "@rollup/plugin-node-resolve": "^7.0.0",
     "concurrently": "^5.1.0",
     "electron": "^16.0.7",
-    "rollup": "^1.32.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    
     "svelte": "^3.19.1",
     "tailwindcss": "^3.0.15"
   }
