--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "license": "MIT",
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "icon": "public/icon.ico"
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
@@ -47,6 +49,7 @@
     }
   },
   "dependencies": {
+    "electron-is-dev": "^2.0.0",
     "electron-reload": "^1.5.0",
     "electron-squirrel-startup": "^1.0.0",
     "sirv-cli": "^0.4.4"
@@ -66,7 +69,6 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    
     "svelte": "^3.19.1",
     "tailwindcss": "^3.0.15"
   }
