--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     }
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "electron-is-dev": "^2.0.0",
     "electron-reload": "^1.5.0",
     "electron-squirrel-startup": "^1.0.0",
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
+    "suncalc": "^1.8.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.50",
