--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
+    "axios": "^0.25.0",
     "electron-is-dev": "^2.0.0",
     "electron-reload": "^1.5.0",
     "electron-squirrel-startup": "^1.0.0",
